# web

./: README.md  bootstrap.py  project.toml  pyproject.toml
.github/workflows/: python-app.yml
agent_ui/: home.py
agent_ui/pages/: 1_launch.py  2_createcluster.py  3_clusterstatus.py
api/: bootstrap.py
api/controller/: employee.py  people.py
api/dao/: base_dao.py  people.py
api/model/: location_update.py  people.py  rfid_tag.py
api/service/: people.py
api/utils/: mongo_connection.py
docs/: pseudo.txt  readme-32-.txt
exasol_test/: exasol_pbm.py  leading_wildcard_test.py  scale_pbm.py  server.py
jenkins/: pack.sh  pipeline.groovy
ollama_ex/: ollama_embeddings.py
parllelisam/: result_parllel.py
parllelisam/asyncioex/: asyncio_example.py
parllelisam/mlthread/: thread_event_loop.py
test/: interview.py  test.py  test_people_controller.py
