[tool.poetry]
name = "agent-ui"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.31.0"
huggingface_hub = "^0.30.2"
transformers = "^4.39.3"
pandas = "^2.1.3"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"
matplotlib = "^3.9.2"
nltk = "^3.9.1"
ipykernel = "^6.25.2"
langchain-community= "*"
langchain-core = "^0.3.66"
langchain-ollama = "^0.3.3"
pypdf = "^3.16.0"
faiss-cpu = "*"
langgraph = "*"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_first_party = ["web"]


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "streamlit.cli:main"
