[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pip = "^23.3.1"
streamlit = "^1.31.0"
uvicorn = "^0.22.0"
fastapi = "^0.103.1"
python-dotenv = "^1.0.0"
pymongo = "^4.5.0"

[tool.isort]
profile = "black"
line_length = 8
multi_line_output = 3
include_trailing_comma = true
known_first_party = ["api"]


[tool.poetry.dev-dependencies]
isort = "^5.12.0"
flake8 = "^6.1.0"
pylint = "^3.1.0"
ruff = "^0.7.0"
pytest = "^8.3.0"
httpx = "^0.27.0"
mongomock = "^4.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.10.0"

[tool.ruff]
line-length = 8

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "bootstrap:bootstrap"